// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldTemplate should add animation on value with updating status 1`] = `
<div
  aria-busy={true}
  className="form-group theme-template has-error theme-updating"
>
  <div
    className="theme-field-template-title"
  >
    <Label
      id="myAwesomeField"
      label="My awesome label"
    />
  </div>
  <input
    id="myAwesomeField"
  />
  <Message
    description="My awesome description"
    descriptionId="myAwesomeField-description"
    errorId="myAwesomeField-error"
    errorMessage="This is wrong o_o"
    isValid={false}
  />
</div>
`;

exports[`FieldTemplate should render invalid className 1`] = `
<div
  className="form-group theme-template has-error"
>
  <div
    className="theme-field-template-title"
  >
    <Label
      id="myAwesomeField"
      label="My awesome label"
    />
  </div>
  <input
    id="myAwesomeField"
  />
  <Message
    description="My awesome description"
    descriptionId="myAwesomeField-description"
    errorId="myAwesomeField-error"
    errorMessage="This is wrong o_o"
    isValid={false}
  />
</div>
`;

exports[`FieldTemplate should render with hint 1`] = `
<div
  className="form-group theme-template"
>
  <div
    className="theme-field-template-title"
  >
    <Label
      id="myAwesomeField"
      label="My awesome label"
    />
    <Action
      icon="talend-info-circle"
      id="myAwesomeField-hint"
      link={true}
      overlayComponent={
        <span>
          Tooltip content, which helps to understand what is the purpose of this field
        </span>
      }
      overlayId="myAwesomeField-hint-overlay"
      overlayPlacement="top"
    />
  </div>
  <input
    id="myAwesomeField"
  />
  <Message
    description="My awesome description"
    descriptionId="myAwesomeField-description"
    errorId="myAwesomeField-error"
    errorMessage="This is wrong o_o"
    isValid={true}
  />
</div>
`;

exports[`FieldTemplate should render with label after 1`] = `
<div
  className="form-group theme-template"
>
  <input
    id="myAwesomeField"
  />
  <div
    className="theme-field-template-title"
  >
    <Label
      id="myAwesomeField"
      label="My awesome label"
    />
  </div>
  <Message
    description="My awesome description"
    descriptionId="myAwesomeField-description"
    errorId="myAwesomeField-error"
    errorMessage="This is wrong o_o"
    isValid={true}
  />
</div>
`;

exports[`FieldTemplate should render with label before 1`] = `
<div
  className="form-group theme-template"
>
  <div
    className="theme-field-template-title"
  >
    <Label
      id="myAwesomeField"
      label="My awesome label"
    />
  </div>
  <input
    id="myAwesomeField"
  />
  <Message
    description="My awesome description"
    descriptionId="myAwesomeField-description"
    errorId="myAwesomeField-error"
    errorMessage="This is wrong o_o"
    isValid={true}
  />
</div>
`;
